valhalla-graphtile/src/graph_tile/snapshots/valhalla_graphtile__graph_tile__directed_edge__test__last_directed_edge.snap
---
source: valhalla-graphtile/src/graph_tile/directed_edge.rs
expression: tile.directed_edges.last().unwrap()
---
DirectedEdge {
    first_bitfield: FirstBitfield {
        end_node: 44895854136,
        restrictions: 0,
        opposing_edge_index: 0,
        forward: 1,
        leaves_tile: 0,
        country_crossing: 0,
    },
    second_bitfield: SecondBitfield {
        edge_info_offset: 90916,
        access_restrictions: 0,
        start_restriction: 0,
        end_restriction: 0,
        complex_restriction: 0,
        dest_only: 0,
        no_thru: 0,
    },
    third_bitfield: ThirdBitfield {
        speed: 60,
        free_flow_speed: 0,
        constrained_flow_speed: 0,
        truck_speed: 0,
        name_consistency: 3,
        edge_use: Road,
        lane_count: 1,
        density: 1,
        classification: Primary,
        surface: PavedSmooth,
        toll: 0,
        roundabout: 0,
        truck_route: 0,
        has_predicted_speed: 0,
    },
    fourth_bitfield: FourthBitfield {
        forward_access: 2031,
        reverse_access: 2031,
        max_up_slope: 0,
        max_down_slope: 0,
        sac_scale: 0,
        cycle_lane: 0,
        is_bike_network: 1,
        use_sidepath: 0,
        bicycle_dismount: 0,
        has_sidewalk_left: 0,
        has_sidewalk_right: 0,
        has_shoulder: 0,
        has_lane_connectivity: 0,
        has_turn_lanes: 0,
        has_exit_signs: 0,
        is_intersection_internal: 0,
        is_tunnel: 0,
        is_bridge: 0,
        has_traffic_signal: 0,
        is_seasonal: 0,
        is_dead_end: 0,
        has_bss_connection: 0,
        has_stop_sign: 0,
        has_yield_sign: 0,
        hov_type: 0,
        is_indoor: 0,
        is_lit: 0,
        is_dest_only_hgv: 0,
    },
    fifth_bitfield: FifthBitfield {
        turn_type: 416,
        edge_to_left: 3,
        length: 872,
        weighted_grade: 6,
        curvature: 12,
    },
    stop_impact_or_line: StopOrLine { raw_value: 67109336 },
    seventh_bitfield: SeventhBitField {
        local_level_edge_index: 1,
        local_level_opp_edge_index: 0,
        shortcut: 0,
        superseded: 0,
        is_shortcut: 0,
        speed_type: 0,
        is_named: 1,
        link_tag: 0,
    },
}
